Fixed Divider Spacing

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/flexible-framer/_flexible-framer.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/flexible-framer/_flexible-framer.scss
@@ -63,11 +63,7 @@
   }
 
   &__graphic-divider {
-    margin-bottom: 4rem;
-
-    @include xl {
-      margin-bottom: 6rem;
-    }
+    margin-bottom: 6rem;
   }
 
   /* Grid Layout */
